Create Scripted testing of features SCENARIO ENGINE
